frontend/src/app/app.component.css
html, body {
    margin: 0; 
    max-height: 100%; 
    overflow: hidden
}

#navbar {
    display: flex;
    height: 10vh;
    padding: 10px;
    align-items: center;
    justify-content: space-between;
    /* background-image: url('/assets/navbar-gameboys.png');
    background-size: 40vh;
    background-repeat: no-repeat;
    background-position: center; */
}


h1 {
    margin: 0;
    flex: 1;
    text-align: center;
}

#login {
    position: absolute;
    top: 5;
    right: 30px;
}

/* hyperlinks */
.unstyled-link {
    text-decoration: none;
    color: inherit;
}

.unstyled-link:visited {
    color: inherit;
}

.unstyled-link:hover,
.unstyled-link:focus,
.unstyled-link:active {
    text-decoration: none;
    color: inherit;
}

